test_suite/tests/ui/unknown-attribute/container.stderr
error: unknown serde container attribute `abc`
 --> $DIR/container.rs:4:10
  |
4 | #[derive(Serialize)]
  |          ^^^^^^^^^

error: aborting due to previous error

